Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/SIOP_Model_Entry__c.object-meta.xml
<CustomObject>
    <description>This object will collect data for the current and forward looking quarter and then automation will populate SIOP Model Data fields accordingly. Data is not actively used here, it is mean for temporary entry only</description>
    <label>SIOP Model Entry</label>
    <nameField>
        <displayFormat>SIOP_ENTRY-{00000}</displayFormat>
        <label>SIOP Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIOP Model Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>