Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter__c</fullName>
    <formula>CASE(
  MONTH(TODAY()),
  1, &quot;Jan-Feb-Mar&quot;,
  2, &quot;Jan-Feb-Mar&quot;,
  3, &quot;Jan-Feb-Mar&quot;,
  4, &quot;Apr-May-Jun&quot;,
  5, &quot;Apr-May-Jun&quot;,
  6, &quot;Apr-May-Jun&quot;,
  7, &quot;Jul-Aug-Sep&quot;,
  8, &quot;Jul-Aug-Sep&quot;,
  9, &quot;Jul-Aug-Sep&quot;,
  10, &quot;Oct-Nov-Dec&quot;,
  11, &quot;Oct-Nov-Dec&quot;,
  12, &quot;Oct-Nov-Dec&quot;,
  &quot;error&quot;
)</formula>
    <label>Current Quarter</label>
    <type>Text</type>
</CustomField>