Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/fxFirstMonthInQtr__c.field-meta.xml
<CustomField>
    <fullName>fxFirstMonthInQtr__c</fullName>
    <description>this will give us the first month in the current quarter base don today</description>
    <formula>DATE (YEAR(Today()), 

CASE ( MONTH(Today())
,1,1
,2,1
,3,1
,4,4
,5,4
,6,4
,7,7
,8,7
,9,7
,10,10
,11,10
,12,10
,1),
1)</formula>
    <inlineHelpText>this will give us the first month in the current quarter base don today</inlineHelpText>
    <label>fxFirstMonthInQtr</label>
    <type>Date</type>
</CustomField>