Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/fxInactiveModel__c.field-meta.xml
<CustomField>
    <fullName>fxInactiveModel__c</fullName>
    <formula>SIOP_Model__r.Inactive__c</formula>
    <label>fxInactiveModel</label>
    <type>Checkbox</type>
</CustomField>