Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/fxRegionType__c.field-meta.xml
<CustomField>
    <fullName>fxRegionType__c</fullName>
    <description>combine Region and Type to use for Report Grouping (due to Group limitation of 3 fields)</description>
    <formula>Text(Region__c) &amp;&quot; - &quot;&amp; Text(Type__c)</formula>
    <label>Region-Type</label>
    <type>Text</type>
</CustomField>