Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/fxSIOPLead__c.field-meta.xml
<CustomField>
    <fullName>fxSIOPLead__c</fullName>
    <formula>SIOP_Model__r.SIOP_Lead__r.fxFullName__c</formula>
    <label>fxSIOPLead</label>
    <type>Text</type>
</CustomField>