Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/isMonCurrOrFuture__c.field-meta.xml
<CustomField>
    <fullName>isMonCurrOrFuture__c</fullName>
    <formula>(IF( (MONTH(TODAY())  =  MONTH(DATEVALUE(CreatedDate)))  , true, false)) || 

(IF( (MONTH(TODAY())  &lt;  MONTH(DATEVALUE(CreatedDate)))  , true, false))</formula>
    <label>isMonCurrOrFuture</label>
    <type>Checkbox</type>
</CustomField>