Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/Month_4__c.field-meta.xml
<CustomField>
    <fullName>Month_4__c</fullName>
    <description>This will be the entry field for UNITS for the relative Month</description>
    <label>Month 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>