Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/Month_5__c.field-meta.xml
<CustomField>
    <fullName>Month_5__c</fullName>
    <description>This will be the entry field for UNITS for the relative Month</description>
    <label>Month 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>