Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_021_Territory_Super</valueSetName>
    </valueSet>
</CustomField>