Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/Region_Forecast_Owner__c.field-meta.xml
<CustomField>
    <fullName>Region_Forecast_Owner__c</fullName>
    <description>This is the Forecast Owner who will update this value</description>
    <formula>IF(ISPICKVAL( Region__c , &#39;EMEAI&#39;),  SIOP_Model__r.Region_Forecast_Owner_EMEA__r.FirstName +&#39; &#39;+SIOP_Model__r.Region_Forecast_Owner_EMEA__r.LastName ,  IF(ISPICKVAL( Region__c , &#39;APAC&#39;),  SIOP_Model__r.Region_Forecast_Owner_APAC__r.FirstName +&#39; &#39;+SIOP_Model__r.Region_Forecast_Owner_APAC__r.LastName ,  IF(ISPICKVAL( Region__c , &#39;AMERICAS&#39;),  SIOP_Model__r.Region_Forecast_Owner_Americas__r.FirstName+&#39; &#39;+SIOP_Model__r.Region_Forecast_Owner_Americas__r.LastName , &#39;&#39;) ) )</formula>
    <label>Region Forecast Owner</label>
    <type>Text</type>
</CustomField>