Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/fields/SIOP_Model__c.field-meta.xml
<CustomField>
    <fullName>SIOP_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIOP Model</label>
    <referenceTo>SIOP_Model_Master__c</referenceTo>
    <relationshipLabel>SIOP Model Entries</relationshipLabel>
    <relationshipName>SIOP_Model_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>