Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/validationRules/Restrict_Editing_All_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Editing_All_Types</fullName>
    <active>true</active>
    <description>Region Forecast owners can edit Region Ask field only and not others.</description>
    <errorConditionFormula>AND( 
  TEXT(Type__c) &lt;&gt; &quot;Region Ask-Orders&quot; 
, TEXT(Type__c) &lt;&gt; &quot;Region Ask-Shipment&quot; 
, NOT( $Permission.C_PERM_4000_SIOP_Edit_All_Types )
, NOW() &gt; fxFlowEditTime__c 
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>V.RULE_SIOP_ENTRY_004: Forecast Owners can only edit Region Ask. Editing others records can be done my SIOP OTR and GCE users</errorMessage>
</ValidationRule>