Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/validationRules/Restrict_editing_Historical_Month1.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_editing_Historical_Month1</fullName>
    <active>true</active>
    <description>Do not let user edit historical months</description>
    <errorConditionFormula>AND( ISCHANGED(Month_1__c),

     fxFirstMonthInQtr__c &lt; (TODAY()-5), 

     NOW() &gt; fxFlowEditTime__c,

     NOT( $Permission.C_PERM_9000_SIOP_Edit_Historical_Data )
)</errorConditionFormula>
    <errorDisplayField>Month_1__c</errorDisplayField>
    <errorMessage>V.RULE_SIOP_ENTRY_001: You can not edit historical months past the cut off dates. Cancel and enter again.</errorMessage>
</ValidationRule>