Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/validationRules/Restrict_editing_Historical_Month3.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_editing_Historical_Month3</fullName>
    <active>true</active>
    <description>Do not let user edit historical months</description>
    <errorConditionFormula>ISCHANGED(Month_3__c) &amp;&amp; 

(TODAY()-5) &gt; ADDMONTHS(fxFirstMonthInQtr__c ,2)

&amp;&amp; NOW() &gt; fxFlowEditTime__c</errorConditionFormula>
    <errorDisplayField>Month_3__c</errorDisplayField>
    <errorMessage>V.RULE_SIOP_ENTRY_003: You can not edit historical months past the cut off dates. Cancel and enter again.</errorMessage>
</ValidationRule>