Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIOP_Model__c</columns>
    <columns>Region__c</columns>
    <columns>Type__c</columns>
    <columns>Current_Quarter__c</columns>
    <columns>Month_1__c</columns>
    <columns>Month_2__c</columns>
    <columns>Month_3__c</columns>
    <columns>Future_Quarter__c</columns>
    <columns>Month_4__c</columns>
    <columns>Month_5__c</columns>
    <columns>Month_6__c</columns>
    <columns>Region_Forecast_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>fxSIOPLead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>