Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/listViews/All_Region_Ask_Shipment_Types.listView-meta.xml
<ListView>
    <fullName>All_Region_Ask_Shipment_Types</fullName>
    <columns>Region__c</columns>
    <columns>Product_Line__c</columns>
    <columns>SIOP_Model__c</columns>
    <columns>Region_Forecast_Owner__c</columns>
    <columns>Type__c</columns>
    <columns>Current_Quarter__c</columns>
    <columns>Month_1__c</columns>
    <columns>Month_2__c</columns>
    <columns>Month_3__c</columns>
    <columns>Future_Quarter__c</columns>
    <columns>Month_4__c</columns>
    <columns>Month_5__c</columns>
    <columns>Month_6__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Region Ask-Shipment</value>
    </filters>
    <filters>
        <field>isMyForecast__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Region Ask-Shipment/Types</label>
</ListView>