Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/listViews/All_SIOP_Entry_Non_blank.listView-meta.xml
<ListView>
    <fullName>All_SIOP_Entry_Non_blank</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
    <columns>NAME</columns>
    <columns>SIOP_Model__c</columns>
    <columns>Region__c</columns>
    <columns>Type__c</columns>
    <columns>Current_Quarter__c</columns>
    <columns>Month_1__c</columns>
    <columns>Month_2__c</columns>
    <columns>Month_3__c</columns>
    <columns>Future_Quarter__c</columns>
    <columns>Month_4__c</columns>
    <columns>Month_5__c</columns>
    <columns>Month_6__c</columns>
    <columns>Region_Forecast_Owner__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>fxSIOPLead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Month_1__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Month_2__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Month_3__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Month_4__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Month_5__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Month_6__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All SIOP Entry (Non blank)</label>
</ListView>