Perkin-UAT/force-app/main/default/objects/SIOP_Model_Entry__c/listViews/SIOP_All_Region_Ask_APAC.listView-meta.xml
<ListView>
    <fullName>SIOP_All_Region_Ask_APAC</fullName>
    <columns>Region__c</columns>
    <columns>Product_Line__c</columns>
    <columns>SIOP_Model__c</columns>
    <columns>Region_Forecast_Owner__c</columns>
    <columns>Type__c</columns>
    <columns>Current_Quarter__c</columns>
    <columns>Month_1__c</columns>
    <columns>Month_2__c</columns>
    <columns>Month_3__c</columns>
    <columns>Future_Quarter__c</columns>
    <columns>Month_4__c</columns>
    <columns>Month_5__c</columns>
    <columns>Month_6__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Region Ask-Orders,Region Ask-Shipment</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>APAC</value>
    </filters>
    <label>SIOP All Region Ask (APAC)</label>
</ListView>